Fixes in Styling and Readability

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,3 @@
-
-
 .page {
   min-width: 1100px;
   /* we don't know how to make mobile versions of websites yet, */
@@ -11,13 +9,6 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
   list-style: none;
 }
-
-/* reset block defaults
-body, header, section, footer, div, a, h1, h2, h3, h4, p {
-	margin: 0;
-  padding: 0;
-}
-*/
 
 /* header classes */
 .header {
@@ -38,7 +29,6 @@ body, header, section, footer, div, a, h1, h2, h3, h4, p {
   z-index: 2;
 }
 
-
 .logo_place_header {
   height: 31px;
   width: 154px;
@@ -56,11 +46,12 @@ body, header, section, footer, div, a, h1, h2, h3, h4, p {
   /* position: absolute;
   left: 64px; */
   align-self: center;
-  margin-left: 64px;
+  margin: 0 0 0 64px;
   z-index: 2;
 }
 
 .header__subtitle {
+  margin: 0;
   max-width: 388px;
   width: 100%;
   position: absolute;
@@ -119,7 +110,7 @@ body, header, section, footer, div, a, h1, h2, h3, h4, p {
   color: #2f80ed;
   max-width: 175px;
   width: 100%;
-  margin: 0 auto 0;
+  margin: 0;
 }
 
 .two-columns__main-text {
@@ -131,11 +122,7 @@ body, header, section, footer, div, a, h1, h2, h3, h4, p {
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  margin-bottom: 30px;
-}
-
-.two-columns__paragraph:first-child {
-  margin-top: 0;
+  margin: 0 0 30px 0;
 }
 
 .two-columns__paragraph:last-child {
@@ -204,7 +191,7 @@ body, header, section, footer, div, a, h1, h2, h3, h4, p {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  margin-bottom: 20px;
+  margin: 0 0 20px 0;
 }
 
 .table__text:last-child {
@@ -245,6 +232,7 @@ body, header, section, footer, div, a, h1, h2, h3, h4, p {
 }
 
 .feynman__subtitle {
+  margin: 0;
   z-index: 1;
   line-height: 51px;
   font-size: 36px;
@@ -267,7 +255,7 @@ body, header, section, footer, div, a, h1, h2, h3, h4, p {
 /* including elements with key-value modifiers */
 .kaufman {
   margin: 0;
-  padding: 90px 0 0;
+  padding: 90px 0 90px;
   background-color: #1f1f1f;
   display: flex;
   position: relative;
@@ -286,7 +274,7 @@ body, header, section, footer, div, a, h1, h2, h3, h4, p {
 }
 
 .table_theme_dark {
-  margin-bottom: 90px;
+  margin: 0px auto;
 }
 
 .table__cell_theme_dark {
@@ -332,6 +320,11 @@ body, header, section, footer, div, a, h1, h2, h3, h4, p {
   margin-bottom: 40px;
   display: flex;
   justify-content: space-between;
+}
+
+.footer__column {
+  margin: 0;
+  padding: 0;
 }
 
 .footer__column_content_copyright {
